[gd_scene load_steps=9 format=3 uid="uid://cgp65oyhp6efv"]

[ext_resource type="Theme" uid="uid://dfmftmyq25pj4" path="res://Resources/Placeholder/UI_Theme.tres" id="1_6dol4"]
[ext_resource type="Script" path="res://Resources/Scripts/options_base.gd" id="1_7e45c"]
[ext_resource type="PackedScene" uid="uid://cf8o2syoaca3b" path="res://Resources/Scenes/UI/audio_control.tscn" id="2_df82c"]
[ext_resource type="Script" path="res://Resources/Scripts/options_container.gd" id="2_dq7ql"]
[ext_resource type="PackedScene" uid="uid://e2s5xorg7w4i" path="res://Resources/Scenes/UI/video_control.tscn" id="3_fapmd"]
[ext_resource type="PackedScene" uid="uid://bv0hnp07y0cqr" path="res://Resources/Scenes/UI/keybind_control.tscn" id="5_jexhr"]
[ext_resource type="PackedScene" uid="uid://bitluopo734ft" path="res://Resources/Scenes/UI/reset_container.tscn" id="5_x73hj"]
[ext_resource type="PackedScene" uid="uid://dou4xu1tk0vbu" path="res://Resources/Scenes/UI/language_control.tscn" id="6_stvc7"]

[node name="options_base" type="Control" node_paths=PackedStringArray("options_container")]
layout_mode = 3
anchor_top = 0.213
anchor_right = 1.0
anchor_bottom = 0.72
offset_top = 0.359985
offset_bottom = -0.600037
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7e45c")
options_container = NodePath("MarginContainer/SplitContainer/options_container")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.223529)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 33.0
offset_right = -511.0
offset_bottom = -30.0
size_flags_vertical = 3
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = 33.0
offset_right = -62.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6dol4")

[node name="SplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 165
dragger_visibility = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SplitContainer"]
layout_mode = 2

[node name="Language" type="Button" parent="MarginContainer/SplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Language"

[node name="Video" type="Button" parent="MarginContainer/SplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="MarginContainer/SplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Audio"

[node name="Keybind" type="Button" parent="MarginContainer/SplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Keybindings"

[node name="options_container" type="PanelContainer" parent="MarginContainer/SplitContainer" node_paths=PackedStringArray("audio_control_node", "audio_control", "video_control_node", "video_control", "language_control_node", "keybind_control_node", "reset_control_node")]
clip_contents = true
layout_mode = 2
script = ExtResource("2_dq7ql")
audio_control_node = NodePath("audio_control")
audio_control = NodePath("audio_control")
video_control_node = NodePath("video_control")
video_control = NodePath("video_control")
language_control_node = NodePath("language_control")
keybind_control_node = NodePath("keybind_control")
reset_control_node = NodePath("../../../reset_control")

[node name="audio_control" parent="MarginContainer/SplitContainer/options_container" instance=ExtResource("2_df82c")]
visible = false
layout_mode = 2

[node name="video_control" parent="MarginContainer/SplitContainer/options_container" instance=ExtResource("3_fapmd")]
visible = false
layout_mode = 2

[node name="keybind_control" parent="MarginContainer/SplitContainer/options_container" instance=ExtResource("5_jexhr")]
visible = false
layout_mode = 2

[node name="language_control" parent="MarginContainer/SplitContainer/options_container" instance=ExtResource("6_stvc7")]
visible = false
layout_mode = 2

[node name="reset_control" parent="." instance=ExtResource("5_x73hj")]
visible = false
offset_left = 420.0
offset_top = 173.0
offset_right = 784.0
offset_bottom = 444.0

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 564.0
offset_right = 196.0
offset_bottom = 601.0
text = "Back"

[node name="save_button" type="Button" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 564.0
offset_right = 121.0
offset_bottom = 601.0
text = "Save"

[connection signal="button_down" from="MarginContainer/SplitContainer/VBoxContainer/Language" to="MarginContainer/SplitContainer/options_container" method="_on_language_button_down"]
[connection signal="button_down" from="MarginContainer/SplitContainer/VBoxContainer/Video" to="MarginContainer/SplitContainer/options_container" method="_on_video_button_down"]
[connection signal="button_down" from="MarginContainer/SplitContainer/VBoxContainer/Audio" to="MarginContainer/SplitContainer/options_container" method="_on_audio_button_down"]
[connection signal="button_down" from="MarginContainer/SplitContainer/VBoxContainer/Keybind" to="MarginContainer/SplitContainer/options_container" method="_on_keybind_button_down"]
[connection signal="button_down" from="save_button" to="." method="save_prefs"]
